sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: reassignment to val
swap=false
    ^AlgBubbleSort1:5: error: not found: value pluspetit
	if(pluspetit(i+1:Int,i:Int)){
           ^AlgBubbleSort1:6: error: not found: type int
		echange(i:int,i+1:int)
                          ^AlgBubbleSort1:7: error: reassignment to val
		swap=true
                    ^